# rpg_box

./: .gitignore  .pre-commit-config.yaml  planning.md  pyproject.toml  readme.md  update_date.py
config/: conf.prc
src/: covermenu.py  gui.py  mainmenu.py  master_fsm.py  narrative.py  rpg_box.py  slideshow.py
