[project]
name = "rpg-box"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "directguiextension>=22.9",
    "panda3d==1.10.15",
    "types-panda3d>=0.4.1",
]

[tool.ty.environment]
root = ["./src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
